--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         <activity
             android:name=".presentation.main.MainActivity"
             android:theme="@style/Theme.App.Starting"
+            android:windowSoftInputMode="adjustNothing"
+
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
