--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,10 @@ buildscript {
         lifecycle_version = '2.6.1'
         core_ktx_version = '1.10.0'
         material_version = '1.9.0'
-        koin_version ='3.4.2'
         glide_version = '4.15.0'
         gson_version = '2.10.1'
         retrofit_version = '2.9.0'
+        hilt_version = '2.49'
     }
 
     dependencies {
@@ -32,4 +32,6 @@ plugins {
     id 'com.android.library' version '8.0.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id("com.google.devtools.ksp") version "1.8.22-1.0.11" apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
+
 }
